Fixed whitespace bug

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -92,6 +92,7 @@ textarea {
   width: 100%;
   height: 100px;
   padding: 5px;
+  word-wrap: break-word;
 }
 
 button {
